test/swapTuple4.slq

def main(){
	x:=([0,0]:ğ”¹^2,[0]:!ğ”¹^1);
	x[0][0]:=H(x[0][0]);
	x[0][1]:=H(x[0][1]);
	i:=0;
	(x[i],x[i+1]):=(x[i+1],x[i]);
	return (x[0]:!ğ”¹^1,x); // error
}
